refactor(service): reduce ProjectServiceImpl complexity with helper classes
- Create ProjectRepositoryHelper for centralized repository operations
- Create ProjectValidator for business rule validation
- Extract date validation logic to ProjectValidator
- Extract product backlog assignment validation
- Replace Stream.collect(Collectors.toList()) with Stream.toList()
- Add comprehensive unit tests for new helper and validator classes
- Update ProjectServiceImplTest to use mocked helpers
- All 205 tests passing